--- a/src/css/AddTodo.css
+++ b/src/css/AddTodo.css
@@ -1,6 +1,6 @@
 @import url('./variables.css');
 
-.todo-app {
+.add-todo {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +9,7 @@
   border-radius: 0.5rem;
 }
 
-.todo-app h1 {
+.add-todo h1 {
   color: var(--blue);
   font-size: 2rem;
   margin-bottom: 2rem;
