--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,8 +8,7 @@
 main {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  padding-top: 10rem;
+  align-items: center;
   height: 100vh;
   background-color: white;
 }
