--- a/src/css/TodoList.css
+++ b/src/css/TodoList.css
@@ -2,8 +2,8 @@
 
 .todo-list {
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
